# OpenCV-C-

./: CMakeLists.txt  README.md
src/: Main.cpp
